# Google-Test-And-Mock-Examples-Using-Cmake

./: .gitignore  Readme.md
GOOGLEMOCKS/First/: CMakeLists.txt  main.cpp
GOOGLEMOCKS/First/FirstTests/: CMakeLists.txt
GOOGLEMOCKS/First/FirstTests/include/: testClass_1.h
GOOGLEMOCKS/First/FirstTests/src/: testClass_1.cpp
GOOGLEMOCKS/GoogleTestProject_backup_mock_full/: CMakeLists.txt
GOOGLEMOCKS/ISOLATING_THE_ISSUE/db/: CMakeLists.txt  Main.cpp  otherClass.cpp  otherClass.h  someClass.cpp  someClass.h
GOOGLEMOCKS/TestingDatabase/: CMakeLists.txt  testRunner.cpp
GOOGLEMOCKS/TestingDatabase/Employer/: CMakeLists.txt
GOOGLEMOCKS/TestingDatabase/Employer/include/: EmployeeManager.hpp
GOOGLEMOCKS/TestingDatabase/IDatabaseConnection/: CMakeLists.txt
GOOGLEMOCKS/TestingDatabase/IDatabaseConnection/include/: IDatabaseConnection.hpp
GOOGLEMOCKS/TestingDatabase/IDatabaseConnection/src/: IDatabaseConnection.cpp
GOOGLETEST/AccountTest/: CMakeLists.txt  main.cpp
GOOGLETEST/AccountTest/Account/: CMakeLists.txt
GOOGLETEST/AccountTest/Account/include/: account.h
GOOGLETEST/AccountTest/Account/src/: account.cpp
GOOGLETEST/RangeValidator/: CMakeLists.txt  testRunner.cpp
GOOGLETEST/RangeValidator/rangeChecker/: CMakeLists.txt
GOOGLETEST/RangeValidator/rangeChecker/include/: checker.h
GOOGLETEST/RangeValidator/rangeChecker/src/: checker.cpp
